Fixed grammar: Nine does not use C-style bracket suffixes for array type syntax.
Added unit tests for some bugs that turned up yesterday.

Fixed break and continue statements.

--- a/ninec/tests/cube/cube2.9
+++ b/ninec/tests/cube/cube2.9
@@ -77,4 +77,5 @@ while not done:
     var evt = SDL.PollEvent()
 
     if evt.Type == SDL.QUIT:
-        done = true
+        break
+        #done = true
