--- a/ninec/tests/cube/quad.9
+++ b/ninec/tests/cube/quad.9
@@ -52,3 +52,6 @@ class Quad:
         while i < self.points.Length:
             self.points[i].Draw()
             i += 1
+
+        #for p in self.points:
+        #    (p as Vertex).Draw()
